# serializer version: 1
# name: test_guardian_change_email_token_requested_notification[None]
  list([
  ])
# ---
# name: test_guardian_change_email_token_requested_notification[new.email@example.com]
  list([
    '''
      kukkuu@example.com|['new.email@example.com']|Guardian email change verification token requested FI|Guardian FI: Michael Patton (old.email@example.com).
              Token: abc123+-.
              Unsubscribe: http://localhost:3000/fi/profile/subscriptions?authToken=a1b2c3d4e5f6g7h8
              
    ''',
  ])
# ---
# name: test_guardian_change_email_token_requested_notification[old.email@example.com]
  list([
    '''
      kukkuu@example.com|['old.email@example.com']|Guardian email change verification token requested FI|Guardian FI: Michael Patton (old.email@example.com).
              Token: abc123+-.
              Unsubscribe: http://localhost:3000/fi/profile/subscriptions?authToken=a1b2c3d4e5f6g7h8
              
    ''',
  ])
# ---
# name: test_guardian_changed_email_notification[None]
  list([
  ])
# ---
# name: test_guardian_changed_email_notification[new.email@example.com]
  list([
    "kukkuu@example.com|['new.email@example.com']|Guardian email changed FI|Guardian FI: Michael Patton (new.email@example.com). Unsubscribe: http://localhost:3000/fi/profile/subscriptions?authToken=a1b2c3d4e5f6g7h8",
  ])
# ---
# name: test_guardian_changed_email_notification[old.email@example.com]
  list([
  ])
# ---
